--- a/horizon7_Service.yml
+++ b/horizon7_Service.yml
@@ -100,6 +100,11 @@ HorizonViewServices :
      dest_ports : 389,636
      source : any
      description : Active Directory LDAP or LDAPS
+    - name : Active Directory LDAP UDP
+     protocol : UDP
+     dest_ports : 389,636
+     source : any
+     description : Active Directory LDAP or LDAPS UDP
    - name : Database MSSQL
      protocol : TCP
      dest_ports : 1433
@@ -145,6 +150,26 @@ HorizonViewServices :
      dest_ports : 443,5895
      source : any 
      description : Horizon View Desktop App Volumes Agent to Manager communication
+   - name : Active Directory GC
+     protocol : TCP
+     dest_ports : 3268
+     source : any 
+     description : Active Directory GC communication
+   - name : Active Directory User Comp Authentication Forest TCP
+     protocol : TCP
+     dest_ports : 88
+     source : any
+     description : Active Directory User Computer Authentication Forest trust
+   - name : Active Directory User Comp Authentication Forest UDP
+     protocol : UDP
+     dest_ports : 88
+     source : any
+     description : Active Directory User Computer Authentication Forest trust
+   - name : Syslog
+     protocol : UDP
+     dest_ports : 514
+     source : any
+     description : Syslog used throughout the infrastructure     
 #DFW Service Groups
 DFWServiceGroups :
    - name : Horizon View Composer Services
@@ -183,6 +208,10 @@ DFWServiceGroups :
    - name : Active Directory
      children :
         - Active Directory LDAP
+        - Active Directory LDAP UDP
+        - Active Directory GC
+        - Active Directory User Comp Authentication Forest TCP
+        - Active Directory User Comp Authentication Forest UDP
    - name : MSSQL Database
      children : 
         - Database MSSQL
@@ -193,6 +222,9 @@ DFWServiceGroups :
    - name : Time Services
      children :
         - Time Services NTP
+   - name : Syslog Services
+     children :
+        - Syslog
    - name : Admin Services
      children :
         - Admin Services HTTPS
@@ -227,6 +259,7 @@ SecurityGroups :
    - Horizon Enrollment Server
    - Horizon Clients Zones
    - Horizon External Clients Zones
+   - Load Balancers Connection Servers
    - Unified Access Gateways Server 
    - VMware Identity Manager
    - App Volumes Manager
@@ -240,6 +273,7 @@ SecurityGroups :
    - MSSQL Servers
    - Domain Name Servers
    - NTP Servers
+   - Syslog Servers
    - Admin Stations
 #Firewall Rules
 FirewallRules : 
@@ -250,14 +284,15 @@ FirewallRules :
    - name : Inter Connection Server FW Rule
      source : Horizon View Connection Server
      destination : Horizon View Connection Server
-     action : Allow  
+     action : Allow
+     serviceGroup : Horizon View Connection Services
    - name : Desktop Client FW Rule
      source : "Horizon Clients Zones, Horizon View Security Server,Horizon View Connection Server,Horizon View Composer Server,App Volumes Manager,Unified Access Gateways Servers"
      destination : Horizon View Desktops
      action : Allow
      serviceGroup : Horizon View Desktops
    - name : Connection Server FW Rule
-     source : Horizon Clients Zones
+     source : "Horizon Clients Zones,Load Balancers Connection Servers,VMware Identity Manager"
      destination : Horizon View Connection Server
      action : Allow
      serviceGroup : Horizon View Connection Services
@@ -282,7 +317,7 @@ FirewallRules :
      action : Allow
      serviceGroup : vSphere-vCenter Services
    - name : Domain Controllers LDAP FW Rule
-     source : "App Volumes Manager,VMware Identity Manager,vSphere vCenter - Hosts,vROPS for Horizon" 
+     source : "App Volumes Manager,VMware Identity Manager,vSphere vCenter - Hosts,vROPS for Horizon,Horizon View Connection Server,Horizon View Composer Server" 
      destination : Domain Controllers
      action : Allow
      serviceGroup : Active Directory
@@ -311,6 +346,11 @@ FirewallRules :
      destination : "NTP Servers"
      action : Allow
      serviceGroup : Time Services
+   - name : Syslog FW Rule
+     source : "Horizon View Desktops,Horizon View Connection Server,Horizon View Security Server,Horizon View Composer Server,Horizon Enrollment Server,Unified Access Gateways Server,App Volumes Manager,VMware Identity Manager,vROPS for Horizon,Airwatch,vSphere vCenter - Hosts"
+     destination : "Syslog Servers"
+     action : Allow
+     serviceGroup : Time Services
    - name : Administrative Console Access FW Rule
      source : Admin Stations
      destination : "Horizon View Desktops,Horizon View Connection Server,Horizon View Security Server,Horizon View Composer Server,Horizon Enrollment Server,Unified Access Gateways Server,App Volumes Manager,VMware Identity Manager,vROPS for Horizon,Airwatch,vSphere vCenter - Hosts"
@@ -328,6 +368,11 @@ FirewallRules :
      serviceGroup : File Services UEM
    - name : App Volumes Agent FW Rule
      source : "Horizon View Desktops"
+     destination : "App Volumes Manager"
+     action : Allow
+     serviceGroup : App Volumes Agent Services
+   - name : Connection Server App Volumes FW Rule
+     source : "Horizon View Connection Server"
      destination : "App Volumes Manager"
      action : Allow
      serviceGroup : App Volumes Agent Services
@@ -366,6 +411,7 @@ FirewallSections :
        - Composer Server FW Rule
        - Inter Connection Server FW Rule
        - vSphere-vCenter FW Rule
+       - Connection Server App Volumes FW Rule
    - name : Horizon View External Connections Section
      firewallRules :
        - UAG FW Rule
@@ -384,6 +430,7 @@ FirewallSections :
        - Desktop DHCP Server IN FW Rule
        - DNS FW Rule
        - NTP FW Rule
+       - Syslog FW Rule
        - Administrative Console Access FW Rule
    - name : AirWatch Section
      firewallRules :
